home-manager/modules/waybar/style.css
/* -------------------------------------------------------------------------------------------------------------------------------------------- */
/* 🎨 GLOBAL STYLES (Catppuccin                                 */
/* The errors are fake. it is fixed in ~/nixOs/home-manager/modules/waybar/default.nix */
/* -------------------------------------------------------------------------------------------------------------------------------------------- */

* {
  border: none;
  /* Sharp corners to match Hyprland rounding=0 */
  border-radius: 0px;
  /* Fetched from the fonts block in stylix.nix */
  font-family: "JetBrains Mono";

  font-weight: bold;
  font-size: 16px;
  min-height: 0;

  /* Use Catppuccin Text Color */
  color: @text;
}

/* The Main Bar Container */
window#waybar {
  background: @base;
}

/* Workspace Buttons */
#workspaces button label {
  color: @text;
  padding: 0 10px;
}

/* Current Active Workspace */
#workspaces button.active label {
  color: @base;
  /* Invert text for contrast */
}

#workspaces button.active {
  background: @accent;
}

#clock,
#battery,
#pulseaudio,
#tray,
#language,
#weather {
  padding: 0 10px;
  margin: 0 10px;
}

/* ----------------------------------------------------------------------- */
/* 🧩 RIGHT-SIDE MODULES                                                   */
/* ----------------------------------------------------------------------- */
/* Every module on the right has colored bottom borders to distinguish them */

#language {
  margin: 0;
  color: @peach;
  border-bottom: 5px solid @peach;
}

#custom-weather {
  margin: 0;
  color: @green;
  border-bottom: 5px solid @green;
}

#pulseaudio {
  margin: 0;
  color: @teal;
  border-bottom: 5px solid @teal;
}

#pulseaudio.muted {
  padding: 0 20px;
  color: @red;
  border-bottom: 5px solid @red;
}

#battery {
  margin: 0;
  color: @blue;
  border-bottom: 5px solid @blue;
}

#clock {
  margin: 0;
  color: @accent;
  border-bottom: 5px solid @accent;
}

#tray {
  margin: 0;
  color: @peach;
  border-bottom: 5px solid @peach;
}

